--- a/moviesshows.html
+++ b/moviesshows.html
@@ -107,7 +107,7 @@
       box-shadow:0 18px 40px rgba(0,0,0,.55)
     }
 
-    .cover{width:100%;aspect-ratio:1/1;object-fit:cover;display:block}
+    .cover{width:100%;aspect-ratio:2/3;object-fit:cover;display:block}
 
     .info{padding:16px 16px 20px;text-align:center}
     .title{font-weight:800;font-size:18px;margin:2px 0 6px}
@@ -141,7 +141,7 @@
     <header class="header">
       <a href="index.html" class="back-btn">← Back to Portfolio</a>
       <h1>Movies &amp; Shows</h1>
-      <p class="quote">“Television is the first truly democratic culture—the first culture available to everybody and entirely governed by what the people want.”</p>
+      <p class="quote">"Television is the first truly democratic culture—the first culture available to everybody and entirely governed by what the people want."</p>
       <div class="emoji">🎬</div>
     </header>
 
@@ -166,7 +166,7 @@
       <div class="grid" id="grid">
         <!-- Game of Thrones -->
         <article class="card" data-genre="drama action">
-          <img class="cover" alt="Game of Thrones" src="https://images.unsplash.com/photo-1611419010196-a573bde22f33?w=900&auto=format&fit=crop"/>
+          <img class="cover" alt="Game of Thrones" src="https://images.unsplash.com/photo-1536440136628-849c177e76a1?w=900&auto=format&fit=crop&q=80"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Game of Thrones</div>
@@ -176,7 +176,7 @@
 
         <!-- Breaking Bad -->
         <article class="card" data-genre="drama">
-          <img class="cover" alt="Breaking Bad" src="https://images.unsplash.com/photo-1574267432644-f74f8ec9f4d0?w=900&auto=format&fit=crop"/>
+          <img class="cover" alt="Breaking Bad" src="https://images.unsplash.com/photo-1478720568477-152d9b164e26?w=900&auto=format&fit=crop&q=80"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Breaking Bad</div>
@@ -186,7 +186,7 @@
 
         <!-- Avatar: The Last Airbender -->
         <article class="card" data-genre="anime action">
-          <img class="cover" alt="Avatar: The Last Airbender" src="https://images.unsplash.com/photo-1578632767115-351597cf2477?w=900&auto=format&fit=crop"/>
+          <img class="cover" alt="Avatar: The Last Airbender" src="https://images.unsplash.com/photo-1618945524163-32451704a3c7?w=900&auto=format&fit=crop&q=80"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Avatar: The Last Airbender</div>
@@ -196,7 +196,7 @@
 
         <!-- One Punch Man -->
         <article class="card" data-genre="anime action comedy">
-          <img class="cover" alt="One Punch Man" src="https://images.unsplash.com/photo-1607604276583-eef5d076aa5f?w=900&auto=format&fit=crop"/>
+          <img class="cover" alt="One Punch Man" src="https://images.unsplash.com/photo-1612036782180-6f0b6cd846fe?w=900&auto=format&fit=crop&q=80"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">One Punch Man</div>
@@ -206,7 +206,7 @@
 
         <!-- IT: Welcome to Derry -->
         <article class="card" data-genre="horror">
-          <img class="cover" alt="IT: Welcome to Derry" src="https://images.unsplash.com/photo-1509248961158-e54f6934749c?w=900&auto=format&fit=crop"/>
+          <img class="cover" alt="IT: Welcome to Derry" src="https://images.unsplash.com/photo-1509347528160-9a9e33742cdb?w=900&auto=format&fit=crop&q=80"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">IT: Welcome to Derry</div>
@@ -216,7 +216,7 @@
 
         <!-- Chainsaw Man -->
         <article class="card" data-genre="anime action horror">
-          <img class="cover" alt="Chainsaw Man" src="https://images.unsplash.com/photo-1613376023733-0a73315d9b06?w=900&auto=format&fit=crop"/>
+          <img class="cover" alt="Chainsaw Man" src="https://images.unsplash.com/photo-1578632767115-351597cf2477?w=900&auto=format&fit=crop&q=80"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Chainsaw Man</div>
@@ -226,7 +226,7 @@
 
         <!-- Bugnonia -->
         <article class="card" data-genre="drama scifi">
-          <img class="cover" alt="Bugnonia" src="https://images.unsplash.com/photo-1536440136628-849c177e76a1?w=900&auto=format&fit=crop"/>
+          <img class="cover" alt="Bugnonia" src="https://images.unsplash.com/photo-1485846234645-a62644f84728?w=900&auto=format&fit=crop&q=80"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Bugnonia</div>
@@ -236,7 +236,7 @@
 
         <!-- Eight Legged Freaks -->
         <article class="card" data-genre="horror comedy action">
-          <img class="cover" alt="Eight Legged Freaks" src="https://images.unsplash.com/photo-1577992805669-c3f9dd4fa00e?w=900&auto=format&fit=crop"/>
+          <img class="cover" alt="Eight Legged Freaks" src="https://images.unsplash.com/photo-1635805737707-575885ab0820?w=900&auto=format&fit=crop&q=80"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Eight Legged Freaks</div>
@@ -246,7 +246,7 @@
 
         <!-- Grandma's Boy -->
         <article class="card" data-genre="comedy">
-          <img class="cover" alt="Grandma's Boy" src="https://images.unsplash.com/photo-1485846234645-a62644f84728?w=900&auto=format&fit=crop"/>
+          <img class="cover" alt="Grandma's Boy" src="https://images.unsplash.com/photo-1594908900066-3f47337549d8?w=900&auto=format&fit=crop&q=80"/>
           <div class="overlay"><button class="play" aria-label="Play"></button></div>
           <div class="info">
             <div class="title">Grandma's Boy</div>
