--- a/index.html
+++ b/index.html
@@ -377,12 +377,13 @@
               <h3 class="title center" style="color:#fff">Video Games</h3>
             </div>
           </a>
-          <article class="card">
+          <!-- Blogs now linked to blog.html -->
+          <a href="blog.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Blogs" loading="lazy" src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?w=1000&auto=format&fit=crop">
             <div class="overlay">
-              <h3 class="title center">Blogs</h3>
+              <h3 class="title center" style="color:#fff">Blogs</h3>
             </div>
-          </article>
+          </a>
           <a id="contactCardLink" href="contact.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Contact Me" loading="lazy" src="https://images.unsplash.com/photo-1423666639041-f56000c27a9a?w=1000&auto=format&fit=crop">
             <div class="overlay">
