--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
       cursor:pointer; z-index:10;
       display:grid; place-items:center;
       transition:all .2s ease;
+      user-select:none;
     }
     .scroll-btn:hover{
       background:rgba(0,0,0,.9);
@@ -230,8 +231,8 @@
       align-items:center;
       justify-content:center;
     }
-    .card:hover .overlay{opacity:1; background:linear-gradient(to top,rgba(0,0,0,.85),rgba(0,0,0,.5));}
-    .title{font-size:15px; font-weight:800; margin:0}
+    /* Make all topic titles white */
+    .title{font-size:15px; font-weight:800; margin:0; color:#fff;}
     .title.center{ text-align:center; }
     .footer{
       padding:48px clamp(16px,4vw,48px) 32px;
@@ -319,7 +320,7 @@
         <p class="desc">Passionate about building innovative solutions and creating seamless digital experiences. Breaking into tech, one project at a time.</p>
         <div class="cta">
           <a class="btn btn-white" href="AngelResume.pdf" target="_blank" rel="noopener"><span aria-hidden="true">▶</span> Resume</a>
-          <a class="btn btn-ghost" href="https://www.linkedin.com/in/angel-contreras-488539195/" target="_blank" rel="noopener"><span aria-hidden="true">ℹ</span> LinkedIn</a>
+          <a class="btn btn-ghost" href="https://www.linkedin.com/in/angel-contrerras-488539195/" target="_blank" rel="noopener"><span aria-hidden="true">ℹ</span> LinkedIn</a>
         </div>
       </div>
     </header>
@@ -332,7 +333,7 @@
           <a href="gaurdcard.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Guard Card" loading="lazy" src="https://images.unsplash.com/photo-1568605117036-5fe5e7bab0b7?w=1000&auto=format&fit=crop">
             <div class="overlay">
-              <h3 class="title center" style="color:#fff">Guard Card</h3>
+              <h3 class="title center">Guard Card</h3>
             </div>
           </a>
           <a href="skills.html" class="card" style="text-decoration:none; cursor:pointer">
@@ -341,18 +342,18 @@
               <h3 class="title center">Skills</h3>
             </div>
           </a>
-          <article class="card">
+          <a href="experience.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Experience" loading="lazy" src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?w=1000&auto=format&fit=crop">
             <div class="overlay">
               <h3 class="title center">Experience</h3>
             </div>
-          </article>
-          <article class="card">
+          </a>
+          <a href="certifications.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Certifications" loading="lazy" src="https://images.unsplash.com/photo-1434030216411-0b793f4b4173?w=1000&auto=format&fit=crop">
             <div class="overlay">
               <h3 class="title center">Certifications</h3>
             </div>
-          </article>
+          </a>
         </div>
         <button class="scroll-btn scroll-right" aria-label="Scroll right">›</button>
       </div>
@@ -366,27 +367,27 @@
           <a href="moviesshows.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Movies & Shows" loading="lazy" src="https://images.unsplash.com/photo-1536440136628-849c177e76a1?w=1000&auto=format&fit=crop">
             <div class="overlay">
-              <h3 class="title center" style="color:#fff">Movies & Shows</h3>
+              <h3 class="title center">Movies & Shows</h3>
             </div>
           </a>
           <!-- LINKED TO videogames.html -->
           <a href="videogames.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Video Games" loading="lazy" src="https://images.unsplash.com/photo-1511512578047-dfb367046420?w=1000&auto=format&fit=crop">
             <div class="overlay">
-              <h3 class="title center" style="color:#fff">Video Games</h3>
+              <h3 class="title center">Video Games</h3>
             </div>
           </a>
           <!-- Blogs now linked to blog.html -->
           <a href="blog.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Blogs" loading="lazy" src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?w=1000&auto=format&fit=crop">
             <div class="overlay">
-              <h3 class="title center" style="color:#fff">Blogs</h3>
+              <h3 class="title center">Blogs</h3>
             </div>
           </a>
           <a id="contactCardLink" href="contact.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Contact Me" loading="lazy" src="https://images.unsplash.com/photo-1423666639041-f56000c27a9a?w=1000&auto=format&fit=crop">
             <div class="overlay">
-              <h3 class="title center" style="color:#fff">Contact Me</h3>
+              <h3 class="title center">Contact Me</h3>
             </div>
           </a>
         </div>
@@ -445,8 +446,8 @@
       
       const step = () => {
         const cardWidth = 290;
-        const gap = 10;
-        return cardWidth + gap;
+        the_gap = 10;
+        return cardWidth + the_gap;
       };
       
       left.addEventListener('click', () => {
