--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
       color:#e5e5e5; text-decoration:none; font-size:14px; font-weight:600;
     }
     .navlinks a:hover{color:var(--ink-2)}
-    /* Move the avatar 1 inch to the right from the top-right */
+    /* Move the avatar 1 inch to the left from the top-right */
     .profile-avatar{
       position:fixed;
       top:8px;
-      right:calc(8px - 1in);
+      right:calc(8px + 1in);
       z-index:1100;
       width:40px; height:40px;
       border-radius:6px;
@@ -494,11 +494,11 @@
 
     function showProfiles(){
       profiles.classList.add('show');
+      profiles.querySelector('.tile:not(.disabled)')?.focus();
     }
     
     function hideProfiles(){ 
-      profiles.classList.remove('
-     show'); 
+      profiles.classList.remove('show'); 
     }
     
     function showMain(){ 
@@ -667,4 +667,4 @@
     });
   </script>
 </body>
-</html>                           
+</html>
