--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
       color:#e5e5e5; text-decoration:none; font-size:14px; font-weight:600;
     }
     .navlinks a:hover{color:var(--ink-2)}
-    /* Move the avatar another 0.5in to the right (closer to the edge than before) */
+    /* Move the avatar 0.25in to the left from the edge */
     .profile-avatar{
       position:fixed;
       top:8px;
-      right:8px; /* previously calc(8px + 0.5in) */
+      right:calc(8px + 0.25in);
       z-index:1100;
       width:40px; height:40px;
       border-radius:6px;
