--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
       <h2 class="section-title">Today's Top Picks for Recruiter</h2>
       <div class="rail">
         <button class="scroll-btn scroll-left" aria-label="Scroll left">‹</button>
-        <div class="scroller" tabindex="0" aria-label="Portfolio carousel">
+        <div class="scroller" aria-label="Portfolio carousel">
           <a href="gaurdcard.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Guard Card" loading="lazy" src="https://images.unsplash.com/photo-1568605117036-5fe5e7bab0b7?w=1000&auto=format&fit=crop">
             <div class="overlay">
@@ -366,7 +366,7 @@
       <h2 class="section-title">Continue Watching for Recruiter</h2>
       <div class="rail">
         <button class="scroll-btn scroll-left" aria-label="Scroll skills left">‹</button>
-        <div class="scroller" tabindex="0" aria-label="Skills carousel">
+        <div class="scroller" aria-label="Skills carousel">
           <a href="moviesshows.html" class="card" style="text-decoration:none; cursor:pointer">
             <img class="thumb" alt="Movies & Shows" loading="lazy" src="https://images.unsplash.com/photo-1536440136628-849c177e76a1?w=1000&auto=format&fit=crop">
             <div class="overlay">
@@ -494,7 +494,6 @@
 
     function showProfiles(){
       profiles.classList.add('show');
-      // Removed any automatic focus to honor "no autofocus" and preserve top-to-bottom reading order
     }
     
     function hideProfiles(){ 
