--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,7 @@
     .navlinks{display:flex; gap:22px; align-items:center; flex-wrap:wrap; flex:1;}
     .navlinks a{
       color:#e5e5e5; text-decoration:none; font-size:14px; font-weight:600;
+      cursor:pointer;
     }
     .navlinks a:hover{color:var(--ink-2)}
     
@@ -59,8 +60,10 @@
       display:grid;
       place-items:center;
       cursor:pointer;
-      transition:transform .2s ease;
+      transition:transform .2s ease, margin-right .2s ease;
       flex-shrink:0;
+      /* moved a quarter inch to the right */
+      margin-right:6.35mm;
     }
     .profile-avatar:hover{
       transform:scale(1.05);
@@ -294,10 +297,10 @@
   <nav class="navbar" id="navbar">
     <a href="index.html" class="brand nf">Angel Contreras</a>
     <div class="navlinks" role="navigation" aria-label="Primary">
-      <a href="index.html#home">Home</a>
-      <a href="index.html#portfolio">Portfolio</a>
-      <a href="index.html#skills">Skills</a>
-      <a href="index.html#projects">Projects</a>
+      <a href="#home" class="nav-link">Home</a>
+      <a href="#portfolio" class="nav-link">Portfolio</a>
+      <a href="#skills" class="nav-link">Skills</a>
+      <a href="#projects" class="nav-link">Projects</a>
       <a href="contact.html">Hire Me</a>
     </div>
     <a href="index.html" class="profile-avatar" aria-label="Back to main" title="Recruiter">
@@ -370,17 +373,29 @@
       <a href="mailto:acontr126@calstatela.edu">Email</a>
       <a href="https://www.linkedin.com/in/angel-contreras-488539195/" target="_blank" rel="noopener">LinkedIn</a>
       <a href="https://github.com" target="_blank" rel="noopener">GitHub</a>
-      <a href="index.html#portfolio">Portfolio</a>
-      <a href="index.html#skills">Skills</a>
-      <a href="index.html#projects">Projects</a>
+      <a href="#portfolio" class="nav-link">Portfolio</a>
+      <a href="#skills" class="nav-link">Skills</a>
+      <a href="#projects" class="nav-link">Projects</a>
       <a href="contact.html">Hire Me</a>
-      <a href="index.html#home">Back to top</a>
+      <a href="#home" class="nav-link">Back to top</a>
     </nav>
     <p class="copyright">© <span id="year"></span> Angel Contreras. All rights reserved.</p>
   </footer>
 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Make in-page navigation work without reload
+    document.querySelectorAll('.nav-link').forEach(link => {
+      link.addEventListener('click', e => {
+        const href = e.target.getAttribute('href');
+        if (href.startsWith('#')) {
+          e.preventDefault();
+          const target = document.querySelector(href);
+          if (target) target.scrollIntoView({ behavior: 'smooth' });
+        }
+      });
+    });
   </script>
 </body>
 </html>
