--- a/projects.html
+++ b/projects.html
@@ -156,6 +156,25 @@
             <a class="chip" href="FinalReport.pdf" target="_blank" rel="noopener">Final Report (PDF)</a>
             <span class="chip">Azure</span><span class="chip">Virtual Networking</span><span class="chip">Security</span>
           </div>
+          <!-- Attached sources for this card are local project PDFs. -->
+        </div>
+      </article>
+
+      <!-- NEW TOPIC — Team Unity (PDF attachment) -->
+      <article class="card">
+        <img class="thumb" alt="Unity engine concept artwork"
+             src="https://images.unsplash.com/photo-1542751110-97427bbecf20?q=80&w=1200&auto=format&fit=crop" />
+        <div class="body">
+          <h3 class="title">Team Unity — Together We Can Accomplish Great Things</h3>
+          <p class="desc">
+            Slide deck on Unity Engine covering collaboration with Version Control, 3D scene creation, and gameplay implementation.
+            Includes examples of colliders/tags, scripting, and a 3-D platformer demo sequence.
+          </p>
+          <div class="chips">
+            <a class="chip" href="teamunity.pdf" target="_blank" rel="noopener">View Team Unity (PDF)</a>
+            <span class="chip">Unity</span><span class="chip">Game Dev</span><span class="chip">C#</span>
+          </div>
+          <!-- Source: :contentReference[oaicite:0]{index=0} -->
         </div>
       </article>
 
