--- a/projects.html
+++ b/projects.html
@@ -141,6 +141,24 @@
   <main class="wrap">
     <section class="grid">
 
+      <!-- NEW TOPIC — Team Alpha Infrastructure Project (attachments) -->
+      <article class="card">
+        <img class="thumb" alt="Team Alpha infrastructure project cover slide"
+             src="https://images.unsplash.com/photo-1518779578993-ec3579fee39f?q=80&w=1200&auto=format&fit=crop" />
+        <div class="body">
+          <h3 class="title">Team Alpha — Infrastructure Project</h3>
+          <p class="desc">
+            End-to-end network and lab modernization plan for a public school, including IDFs, Meraki switching, VLAN design,
+            security hardening, and a 76-day rollout timeline with budget and risks.
+          </p>
+          <div class="chips">
+            <a class="chip" href="TeamAlpha_Infrastructure_Project%20FINAL.pdf" target="_blank" rel="noopener" download>Slides (PDF)</a>
+            <a class="chip" href="Project_Charter_CIS%204100%20%20FINAL.pdf" target="_blank" rel="noopener" download>Project Charter (PDF)</a>
+            <span class="chip">Networking</span><span class="chip">Planning</span><span class="chip">Security</span>
+          </div>
+        </div>
+      </article>
+
       <!-- NEW TOPIC — CareGroup/BILH Network Administration -->
       <article class="card">
         <img class="thumb" alt="Azure virtual network topology screenshot"
@@ -156,7 +174,6 @@
             <a class="chip" href="FinalReport.pdf" target="_blank" rel="noopener">Final Report (PDF)</a>
             <span class="chip">Azure</span><span class="chip">Virtual Networking</span><span class="chip">Security</span>
           </div>
-          <!-- Attached sources for this card are local project PDFs. -->
         </div>
       </article>
 
@@ -174,7 +191,6 @@
             <a class="chip" href="teamunity.pdf" target="_blank" rel="noopener">View Team Unity (PDF)</a>
             <span class="chip">Unity</span><span class="chip">Game Dev</span><span class="chip">C#</span>
           </div>
-          <!-- Source: :contentReference[oaicite:0]{index=0} -->
         </div>
       </article>
 
@@ -308,5 +324,10 @@
     // year
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
+
+  <!-- Sources for the new Team Alpha attachments:
+       :contentReference[oaicite:0]{index=0}
+       :contentReference[oaicite:1]{index=1}
+  -->
 </body>
 </html>
