--- a/projects.html
+++ b/projects.html
@@ -141,10 +141,10 @@
   <main class="wrap">
     <section class="grid">
 
-      <!-- NEW TOPIC — Team Alpha Infrastructure Project (attachments) -->
+      <!-- Team Alpha — Infrastructure Project (updated photo) -->
       <article class="card">
-        <img class="thumb" alt="Team Alpha infrastructure project cover slide"
-             src="https://images.unsplash.com/photo-1518779578993-ec3579fee39f?q=80&w=1200&auto=format&fit=crop" />
+        <img class="thumb" alt="Data center racks and network infrastructure"
+             src="https://source.unsplash.com/1200x800/?data-center,network,servers" />
         <div class="body">
           <h3 class="title">Team Alpha — Infrastructure Project</h3>
           <p class="desc">
@@ -159,10 +159,10 @@
         </div>
       </article>
 
-      <!-- NEW TOPIC — CareGroup/BILH Network Administration -->
+      <!-- CareGroup/BILH Network Administration (updated photo) -->
       <article class="card">
-        <img class="thumb" alt="Azure virtual network topology screenshot"
-             src="https://images.unsplash.com/photo-1558494949-ef010cbdcc31?q=80&w=1200&auto=format&fit=crop" />
+        <img class="thumb" alt="Hospital technology network concept"
+             src="https://source.unsplash.com/1200x800/?hospital,healthcare,technology" />
         <div class="body">
           <h3 class="title">CareGroup / BILH — Network Administration</h3>
           <p class="desc">
@@ -177,10 +177,10 @@
         </div>
       </article>
 
-      <!-- NEW TOPIC — Team Unity (PDF attachment) -->
+      <!-- Team Unity (updated photo) -->
       <article class="card">
-        <img class="thumb" alt="Unity engine concept artwork"
-             src="https://images.unsplash.com/photo-1542751110-97427bbecf20?q=80&w=1200&auto=format&fit=crop" />
+        <img class="thumb" alt="Unity game engine / development concept"
+             src="https://source.unsplash.com/1200x800/?unity3d,game-engine,game-development" />
         <div class="body">
           <h3 class="title">Team Unity — Together We Can Accomplish Great Things</h3>
           <p class="desc">
@@ -194,114 +194,12 @@
         </div>
       </article>
 
-      <!-- All Meno -->
-      <article class="card">
-        <img class="thumb" alt="All Meno website screenshot"
-             src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?q=80&w=1200&auto=format&fit=crop" />
-        <div class="body">
-          <h3 class="title">All Meno</h3>
-          <p class="desc">Personal project listing restaurants in and around my college. Built with pure HTML and JavaScript.</p>
-          <div class="chips">
-            <span class="chip">HTML5</span><span class="chip">CSS3</span>
-          </div>
-        </div>
-      </article>
-
-      <!-- Angular to React Migration -->
-      <article class="card">
-        <img class="thumb" alt="Angular to React migration screenshot"
-             src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?q=80&w=1200&auto=format&fit=crop" />
-        <div class="body">
-          <h3 class="title">Angular to React Migration</h3>
-          <p class="desc">Led the migration from Angular to React, focusing on complex components and Formik-based validations.</p>
-          <div class="chips">
-            <span class="chip">ReactJS</span><span class="chip">Ruby on Rails</span>
-          </div>
-        </div>
-      </article>
-
-      <!-- Avataar Ventures Website -->
-      <article class="card">
-        <img class="thumb" alt="Avataar Ventures website screenshot"
-             src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1200&auto=format&fit=crop" />
-        <div class="body">
-          <h3 class="title">Avataar Ventures Website</h3>
-          <p class="desc">Built the frontend from scratch to strengthen the brand’s presence and showcase services.</p>
-          <div class="chips">
-            <span class="chip">HTML5</span><span class="chip">CSS3</span><span class="chip">jQuery</span>
-            <span class="chip">AWS</span><span class="chip">ECS</span>
-          </div>
-        </div>
-      </article>
-
-      <!-- Corporate Dashboard for Ekincare -->
-      <article class="card">
-        <img class="thumb" alt="Corporate dashboard screenshot"
-             src="https://images.unsplash.com/photo-1551281044-8d8f63cf9938?q=80&w=1200&auto=format&fit=crop" />
-        <div class="body">
-          <h3 class="title">Corporate Dashboard for Ekincare</h3>
-          <p class="desc">Revamped the UI for a corporate dashboard, improved UX, and implemented RESTful APIs across the stack.</p>
-          <div class="chips">
-            <span class="chip">Ruby on Rails</span><span class="chip">ReactJS</span>
-            <span class="chip">PostgreSQL</span><span class="chip">AWS</span>
-          </div>
-        </div>
-      </article>
-
-      <!-- Customer Relationship Management Tool -->
-      <article class="card">
-        <img class="thumb" alt="CRM tool screenshot"
-             src="https://images.unsplash.com/photo-1551281044-1f9b89e98f97?q=80&w=1200&auto=format&fit=crop" />
-        <div class="body">
-          <h3 class="title">Customer Relationship Management Tool</h3>
-          <p class="desc">Built a CRM to manage investor details end-to-end, handling both frontend and backend.</p>
-          <div class="chips">
-            <span class="chip">NodeJS</span><span class="chip">ReactJS</span>
-            <span class="chip">MongoDB</span><span class="chip">AWS</span><span class="chip">Material UI</span>
-          </div>
-        </div>
-      </article>
-
-      <!-- E-Commerce Website for Natural Products -->
-      <article class="card">
-        <img class="thumb" alt="E-commerce site screenshot"
-             src="https://images.unsplash.com/photo-1515168833906-d2a3b82b302a?q=80&w=1200&auto=format&fit=crop" />
-        <div class="body">
-          <h3 class="title">E-Commerce Website for Natural Products</h3>
-          <p class="desc">Self-manufactured products store using the MERN stack with DevOps as a freelancer.</p>
-          <div class="chips">
-            <span class="chip">ReactJS</span><span class="chip">Ruby on Rails</span>
-          </div>
-        </div>
-      </article>
-
-      <!-- ESOP & Cap Table Management -->
-      <article class="card">
-        <img class="thumb" alt="ESOP & Cap Table management screenshot"
-             src="https://images.unsplash.com/photo-1551281044-6af99c58e0c5?q=80&w=1200&auto=format&fit=crop" />
-        <div class="body">
-          <h3 class="title">ESOP &amp; Cap Table Management</h3>
-          <p class="desc">As a frontend dev, wrote structured code for ESOP/cap-table tooling, collaborating with a team of 3.</p>
-          <div class="chips">
-            <span class="chip">NodeJS</span><span class="chip">ReactJS</span><span class="chip">MongoDB</span>
-            <span class="chip">AWS</span><span class="chip">ECS</span><span class="chip">Lambda</span>
-          </div>
-        </div>
-      </article>
-
-      <!-- Secondary Investment Platform -->
-      <article class="card">
-        <img class="thumb" alt="Secondary investment platform screenshot"
-             src="https://images.unsplash.com/photo-1551281044-8bda5c0f1b79?q=80&w=1200&auto=format&fit=crop" />
-        <div class="body">
-          <h3 class="title">Secondary Investment Platform</h3>
-          <p class="desc">Platform for analysts to generate investor reports with rich charts and visualizations.</p>
-          <div class="chips">
-            <span class="chip">NodeJS</span><span class="chip">ReactJS</span><span class="chip">MongoDB</span>
-            <span class="chip">AWS Cognito</span><span class="chip">ECS</span><span class="chip">Lambda</span>
-          </div>
-        </div>
-      </article>
+      <!-- Removed requested topics:
+           All Meno, Angular to React Migration, Avataar Ventures Website,
+           Corporate Dashboard for Ekincare, Customer Relationship Management Tool,
+           E-Commerce Website for Natural Products, ESOP & Cap Table Management,
+           Secondary Investment Platform
+      -->
 
     </section>
   </main>
