--- a/index.html
+++ b/index.html
@@ -277,7 +277,8 @@
           </div>
           <span class="label">Recruiter</span>
         </button>
-        <button class="tile disabled" data-profile="family" data-target="#home" aria-label="Friends and Family profile" aria-disabled="true" tabindex="-1">
+        <!-- Friends / Family tab is now clickable -->
+        <button class="tile" data-profile="family" data-target="#home" aria-label="Friends and Family profile">
           <div class="avatar av-family" aria-hidden="true">
             <span class="icon">
               <svg viewBox="0 0 24 24" aria-hidden="true">
@@ -287,7 +288,8 @@
           </div>
           <span class="label">Friends / Family</span>
         </button>
-        <button class="tile disabled" data-profile="guest" data-target="#home" aria-label="Guest profile" aria-disabled="true" tabindex="-1">
+        <!-- Guest tab is now clickable -->
+        <button class="tile" data-profile="guest" data-target="#home" aria-label="Guest profile">
           <div class="avatar av-guest" aria-hidden="true">
             <span class="icon">
               <svg viewBox="0 0 24 24" aria-hidden="true">
